test/Fail/Issue1209-1.err
Issue1209-1.agda:22.1-24.15: error: [TerminationIssue]
Termination checking failed for the following functions:
  inh
Problematic calls:
  inh
    (at Issue1209-1.agda:23.19-22)
